Fix LanguageSelector text color on iOS, fix Next.js server-side warning

--- a/src/components/LanguageSelector/LanguageSelector.module.css
+++ b/src/components/LanguageSelector/LanguageSelector.module.css
@@ -4,6 +4,10 @@
   width: 6rem;
 }
 
+.container button {
+  color: #6d309d;
+}
+
 .selector {
   padding: 10px;
   height: 2rem;
